# mylobster

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  cbindgen.toml
.github/workflows/: build.yml
docs/: channels.md  configuration.md  gateway-protocol.md  memory.md  providers.md  sessions.md  ssrf-protection.md  tools.md  web-tools.md
src/: ffi.rs  lib.rs  main.rs
src/agents/: acp.rs  mod.rs  model_fallback.rs
src/agents/tools/: agent_step.rs  bash.rs  browser_tool.rs  canvas.rs  common.rs  cron_tool.rs  discord_actions.rs  image_tool.rs  media_tool.rs  memory_tool.rs  message_tool.rs  mod.rs  node_tools.rs  pdf_tool.rs  sessions_a2a.rs  sessions_tool.rs  slack_actions.rs  subagents.rs  telegram_actions.rs  tts_tool.rs  web_fetch.rs  web_search.rs  whatsapp_actions.rs
src/browser/: mod.rs
src/channels/: bluebubbles.rs  discord.rs  feishu.rs  googlechat.rs  imessage.rs  irc.rs  line.rs  matrix.rs  mattermost.rs  mod.rs  nextcloud.rs  normalize.rs  nostr.rs  plugin.rs  signal.rs  slack.rs  synology_chat.rs  teams.rs  telegram.rs  tlon.rs  twitch.rs  webchat.rs  whatsapp.rs  zalo.rs  zalouser.rs
src/cli/: mod.rs
src/config/: defaults.rs  io.rs  mod.rs  types.rs  validation.rs
src/cron/: mod.rs
src/gateway/: auth.rs  chat.rs  client.rs  connect_policy.rs  mod.rs  protocol.rs  routes.rs  server.rs  websocket.rs
src/hooks/: mod.rs
src/infra/: abort_signal.rs  delivery.rs  dm_policy.rs  doctor.rs  exec_approval.rs  hardlink_guards.rs  mod.rs  security_path.rs
src/infra/secrets/: env_provider.rs  exec_provider.rs  mod.rs  reload.rs  resolver.rs  snapshot.rs  sops_provider.rs  types.rs
src/logging/: mod.rs
src/media/: mod.rs
src/memory/: batch_embedding.rs  chunking.rs  embeddings.rs  hybrid.rs  lancedb.rs  manager.rs  mod.rs  postgres.rs  schema.rs  search.rs
src/plugins/: api.rs  discovery.rs  loader.rs  manifest.rs  mod.rs
src/providers/: anthropic.rs  anthropic_compat.rs  bedrock.rs  copilot.rs  gemini.rs  groq.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  openai_codex.rs  openai_compat.rs  xai.rs
src/routing/: mod.rs
src/sessions/: mod.rs
src/skills/: manifest.rs  mod.rs
src/tts/: mod.rs
tests/: chat_integration.rs  gateway_handshake.rs
